--- a/src/components/article-detail.css
+++ b/src/components/article-detail.css
@@ -7,7 +7,6 @@
 .button {
     display: flex;
     width: 7%;
-    justify-content: start;
-    align-items: center;
+    justify-content: flex-start;
     cursor: pointer;
 }
